ipc/ipdl/test/ipdl/ok/union_Basic.ipdl
union Basic {
    int;
    double;
};

sync protocol union_Basic {

parent:
    sync Msg(Basic p) returns (Basic r);

};
